# libbzip2-rs

./: .gitattributes  .gitignore  01-no_empty_statements.cocci  02-no_deref_only_statements.cocci  03-casted_negated_ints_instead_of_negated_casted_ints.cocci  04-fix-int-types.cocci  05-while_1_to_loop.cocci  06-merge_let_assign.cocci  07-decompress_no_explicit_dstate_deref.cocci  08-remove_cast_for_cmp.cocci  09-remove_redundant_bool_ops.cocci  10-remove_unnecessary_statements.cocci  11-blocksort_no_explicit_estate_deref.cocci  12-decompress-retval-return-code.cocci  Cargo.toml  README.md  SECURITY.md  allocator.rs  blocksort.rs  bzip2.rs  bzip2_benchmarks.json  bzip2recover.rs  bzlib.c  bzlib.rs  c2rust-lib.rs  compress.rs  crctable.rs  decompress.c  decompress.rs  high_level.rs  huffman.rs  qemu-cargo-config.toml  randtable.rs
.github/workflows/: bench.yml  checks.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress.rs  decompress.rs  decompress_chunked.rs  decompress_random_input.rs
libbz2-rs-sys/: Cargo.toml
libbz2-rs-sys-cdylib/: Cargo.toml  README.md
libbz2-rs-sys-cdylib/src/: lib.rs
libbz2-rs-sys/src/: blocksort.rs  bzlib.rs  compress.rs  decompress.rs  high_level.rs  huffman.rs  lib.rs
libbzip2-rs-sys/: Cargo.toml
libbzip2-rs-sys-cdylib/: Cargo.toml  README.md  bzpipe.c
libbzip2-rs-sys-cdylib/src/: lib.rs
libbzip2-rs-sys/src/: allocator.rs  bzlib.rs  compress.rs  decompress.rs  high_level.rs  huffman.rs  lib.rs
test-libbz2-rs-sys/: Cargo.toml
test-libbz2-rs-sys/examples/: compress.rs  decompress.rs
test-libbz2-rs-sys/src/: chunked.rs  lib.rs
test-libbzip2-rs-sys/: Cargo.toml  no_stdio.c
test-libbzip2-rs-sys/examples/: decompress.rs
test-libbzip2-rs-sys/src/: chunked.rs  lib.rs
tests/: compress-sample1-log.txt  quick.rs  recover.rs
