[workspace]
members = [
    "libbz2-rs-sys",
    "test-libbz2-rs-sys",
]
exclude = [
    "libbz2-rs-sys-cdylib",
]
package.edition = "2021"


[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.82" # MSRV

[[bin]]
name = "bzip2"
path = "bzip2.rs"

[[bin]]
name = "bzip2recover"
path = "bzip2recover.rs"

[workspace.dependencies]
libc = "0.2"
libbz2-rs-sys = { path = "libbz2-rs-sys/", default-features = false }


[dependencies]
libc = "0.2"
libbz2-rs-sys = { path = "libbz2-rs-sys/" }

[dev-dependencies]
tempfile = "3.13.0"
crc32fast = "=1.4.2"
