[workspace]
members = [
    "libbz2-rs-sys",
    "test-libbz2-rs-sys",
]
exclude = [
    "libbz2-rs-sys-cdylib",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "bzip2-1.0.6"
repository = "https://github.com/trifectatechfoundation/libbzip2-rs"
homepage = "https://github.com/trifectatechfoundation/libbzip2-rs"
readme = "./README.md"
description = "a drop-in compatible rust bzip2 implementation"
publish = true
rust-version = "1.82" # MSRV

[workspace.dependencies]
libc = "0.2"
libbz2-rs-sys = { path = "libbz2-rs-sys/", default-features = false }

[profile.relwithdebinfo]
inherits = "release"
debug = true

[package]
name = "libbzip2-rs"
readme.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "bzip2"
path = "bzip2.rs"

[[bin]]
name = "bzip2recover"
path = "bzip2recover.rs"

[dependencies]
libc.workspace = true
# we need `std` here, because we test the log output of the binaries, and those only
# get printed when std is enabled.
libbz2-rs-sys = { workspace = true, features = ["stdio", "c-allocator"] }

[dev-dependencies]
tempfile = "3.13.0"
crc32fast = "=1.4.2"
