[package]
name = "libbz2-rs-sys-cdylib"
version = "0.1.2"
edition = "2021"
license = "bzip2-1.0.6"
repository = "https://github.com/trifectatechfoundation/libbzip2-rs"
homepage = "https://github.com/trifectatechfoundation/libbzip2-rs"
readme = "./README.md"
description = "a drop-in compatible libbz2 cdylib"
publish = true
rust-version = "1.82" # MSRV

[lib]
name = "bz2_rs" # turns into e.g. `libbz2_rs.so`
crate-type = ["cdylib"]
test = false
bench = false

[features]
default = ["stdio"]
stdio = ["libbz2-rs-sys/stdio"]
custom-prefix = ["libbz2-rs-sys/custom-prefix"] # use the LIBBZ2_RS_SYS_PREFIX to prefix all exported symbols
semver-prefix = ["libbz2-rs-sys/semver-prefix"] # prefix all symbols in a semver-compatible way
capi = []

[dependencies]
libbz2-rs-sys = { version = "0.1.2", path = "../libbz2-rs-sys", default-features = false, features = ["c-allocator"] }
libc = "0.2"

[package.metadata.capi.library]
version = "1.0.9" # the bzip2 api version we match
name = "bz2_rs"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.pkg_config]
name = "libbz2_rs"
filename = "libbz2_rs"

# no_std requires panic=abort
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
