[package]
name = "libbz2-rs-sys-cdylib"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "bzip2-1.0.6"
repository = "https://github.com/trifectatechfoundation/libbzip2-rs"
homepage = "https://github.com/trifectatechfoundation/libbzip2-rs"
publish = true
description = "A memory-safe bzip2 implementation written in rust"
rust-version = "1.82" # MSRV

[lib]
name = "bz2_rs" # turns into e.g. `libbz2_rs.so`
crate-type=["cdylib"]

[features]
default = ["c-allocator", "libbzip2-rs-sys/stdio",  "libbzip2-rs-sys/std"] # when used as a cdylib crate, use the c allocator
c-allocator = ["libbzip2-rs-sys/c-allocator"] # by default, use malloc/free for memory allocation
rust-allocator = ["libbzip2-rs-sys/rust-allocator", "libbzip2-rs-sys/std"] # by default, use the rust global alloctor for memory allocation
custom-prefix = ["libbzip2-rs-sys/custom-prefix"] # use the LIBBZIP2_RS_SYS_PREFIX to prefix all exported symbols
capi = []

[dependencies]
libbzip2-rs-sys = { version = "0.0.0", path = "../libbzip2-rs-sys", default-features = false }

[package.metadata.capi.library]
version = "1.0.9" # the bzip2 api version we match
name = "bz2_rs"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.pkg_config]
name = "libbz2_rs"
filename = "libbz2_rs"
