[package]
name = "libbz2-rs-sys-cdylib"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "bzip2-1.0.6"
repository = "https://github.com/trifectatechfoundation/libbzip2-rs"
homepage = "https://github.com/trifectatechfoundation/libbzip2-rs"
publish = true
description = "A memory-safe bzip2 implementation written in rust"
rust-version = "1.82" # MSRV

[lib]
name = "bz2_rs" # turns into e.g. `libbz2_rs.so`
crate-type = ["cdylib"]
test = false

[features]
default = ["stdio"]
stdio = ["libbzip2-rs-sys/stdio"]
custom-prefix = ["libbzip2-rs-sys/custom-prefix"] # use the LIBBZIP2_RS_SYS_PREFIX to prefix all exported symbols
capi = []

[dependencies]
libbzip2-rs-sys = { version = "0.0.0", path = "../libbzip2-rs-sys", default-features = false, features = ["c-allocator"] }
libc = "0.2"

[package.metadata.capi.library]
version = "1.0.9" # the bzip2 api version we match
name = "bz2_rs"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.pkg_config]
name = "libbz2_rs"
filename = "libbz2_rs"

# no_std requires panic=abort
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
