[package]
name = "test-libbz2-rs-sys"
readme = "README.md"
description = "testing libbz2-rs-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bzip2-sys = { version = "0.1.11", features = ["static"] }
libbz2-rs-sys = { workspace = true, default-features = true, features = ["testing-prefix"] }
libc.workspace = true
